Fix charts_block not visible

--- a/css-1.7.8/style.css
+++ b/css-1.7.8/style.css
@@ -1435,10 +1435,6 @@ ul.clist {
 	font-weight: bold;
 }
 
-.charts_block {
-	width: 0; /* this prevents the chart breaking out of its container */
-}
-
 /* configure block form */
 form[action^="?block_id"] .radio-inline,
 form[action^="?block_id"] .checkbox,
